@@ -136,6 +136,7 @@
                 <configuration>
                     <argLine>
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
+                        --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         --add-opens org.junit.jupiter.engine/org.junit.jupiter.engine.descriptor=ALL-UNNAMED
                         --add-opens org.junit.jupiter.engine/org.junit.jupiter.engine.support=ALL-UNNAMED
                     </argLine>
